feat: 新增雷达 WebSocket 连接测试页面，更新SenHub至1.0.33版本，重构后端API以支持Javalin框架，优化报警记录和规则管理功能，增强错误处理和日志记录